# mp_debugpy

./: .env  .gitignore  .gitmodules  README.md  SETVARIABLE_SOLUTION.md  dockerfile  mp_debugpy.drawio  mpy.sh  performance.md  pyproject.toml  start_performance.sh  test_enhanced_variables.py  test_setvariable_final.py  test_setvariable_integration.py  update_submodules.ps1  update_submodules.sh
.copilot/: instructions.md
.github/: copilot-instructions.md
docs/: DAP_SETVARIABLE_FINAL.md
firmware/esp32_settrace_save_names/: ESP32_GENERIC.MD
firmware/unix_settrace_local_xx/: micropython
firmware/unix_settrace_save_names/: micropython
firmware/unix_settrace_set_local/: micropython
launcher/: start_debugpy.py  start_debugpy_esp32.py  upload_src.ps1  upload_src.sh
python-ecosys/debugpy/debugpy/: public_api.py
src/: _secrets.py  boot.py  building.py  run_pystone.py  target.py
tests/: conftest.py  helpers.py  test_dbg_01_launcher.py  test_dbg_02_initialize.py  test_dbg_03_attach.py  test_dbg_04_breakpoints.py  test_dbg_05_continue.py  test_debug_initialize.py  test_debug_launcher.py  test_frame_set_local.py  test_set_variable_direct.py
tests/fixtures/: attach_server.py  debuggee.py  fake_vscode.py  launcher.py
